WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36630
[chromium] REGRESSION: Some LayoutTests fail after
r56567
https://bugs.webkit.org/show_bug.cgi?id=36630
Summary
[chromium] REGRESSION: Some LayoutTests fail after r56567
Dmitry Titov
Reported
2010-03-25 17:18:24 PDT
After
http://trac.webkit.org/changeset/56567
landed, the following tests started to fail on Linux and Windows Chromium ports: editing/selection/5195166-1.html = TEXT editing/selection/extend-after-mouse-selection.html = TEXT editing/selection/extend-selection-after-double-click.html = TEXT editing/selection/extend-selection.html = TEXT editing/selection/shrink-selection-after-shift-pagedown.html = TEXT editing/deleting/delete-line-009.html = IMAGE+TEXT editing/deleting/delete-line-010.html = IMAGE+TEXT editing/selection/5195166-2.html = IMAGE+TEXT editing/selection/extend-by-character-004.html = IMAGE+TEXT editing/selection/extend-by-character-005.html = IMAGE+TEXT editing/unsupported-content/list-delete-001.html = IMAGE+TEXT editing/unsupported-content/list-delete-003.html = IMAGE+TEXT
Attachments
Patch
(3.49 KB, patch)
2010-03-25 21:30 PDT
,
Ojan Vafai
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Titov
Comment 1
2010-03-25 17:27:39 PDT
Temporarily silenced the tests:
http://trac.webkit.org/changeset/56582
Ojan Vafai
Comment 2
2010-03-25 21:30:12 PDT
Created
attachment 51712
[details]
Patch
Eric Seidel (no email)
Comment 3
2010-03-25 21:32:39 PDT
Comment on
attachment 51712
[details]
Patch OK. Thank you.
Ojan Vafai
Comment 4
2010-03-25 21:41:54 PDT
http://trac.webkit.org/changeset/56598
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug