WebCore: 2010-03-25  Ojan Vafai  <ojan@chromium.org>

Reviewed by Eric Seidel.

        [chromium] REGRESSION: Some LayoutTests fail after r56567
        https://bugs.webkit.org/show_bug.cgi?id=36630

        Fix boolean logic goofup. This was a last minute code review
        change that didn't get tested on Windows before commit.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::setIsDirectional):

LayoutTests:
2010-03-25  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        [chromium] REGRESSION: Some LayoutTests fail after r56567
        https://bugs.webkit.org/show_bug.cgi?id=36630

        * platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/47892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56598 268f45cc-cd09-0410-ab3c-d52691b4dbfc